--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <form id="myForm" novalidate>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email">
         <span class="error" id="emailError"></span>
 
         <label for="country">Country:</label>
